file upload bare bones

--- a/app/landing_page.html
+++ b/app/landing_page.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Request evaluation</title>
     <link href="../style.css" rel="stylesheet" type="text/css">
-
-    <title>Landing page</title>
 </head>
 <body>
-    <form class="commonBox">
-        <h1>This is the applicaiton page </h1>
-    </form>
+    <div class="commonBox">
+        <h1>Landing page</h1>
+        <form action="index.php">
+            <input type="submit"  value="See your evaluation list">
+        </form>
+        <form action="file_upload_form.html">
+            <input type="submit"  value="Submit evaluation">
+        </form>
+    </div>
+    <div>
+        
+    </div>
 </body>
 </html>
