--- a/confirmation/incorrect_password.html
+++ b/confirmation/incorrect_password.html
@@ -10,6 +10,9 @@
 <body>
     <div class="commonBox">
         <h1>Your password is incorrect.</h1>
+        <form onclick="history.back()">
+            <input type="submit"  value="Back">
+        </form>
     </div>
 </body>
 </html>
