--- a/confirmation/username_not_found.html
+++ b/confirmation/username_not_found.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Username not found</title>
+    
     <link href="../style.css" rel="stylesheet" type="text/css">
 
-    <title>Account Locked</title>
 </head>
 <body>
     <div class="commonBox">
-        <h1>Account has been locked. Try logging in later. </h1>
+        <h1>Username not found.</h1>
+        <form onclick="history.back()">
+            <input type="submit"  value="Back">
+        </form>
     </div>
 </body>
 </html>
