--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Login</title>
+    <title>Lovejoy's Antique Evaluation</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css"> 
 
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <script src="validation/loginSubmit.js"></script>
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="commonBox">
-    <h1>Login</h1>
+    <h1>Lovejoy's Antique  Login</h1>
     <form action="login.php" method="post" id="login-form">
         
         <label for="username">
